# simple-llm-template

./: .env.example  README.md  compose.yaml  env.encrypted  pyproject.toml
docker/: Dockerfile.app  Dockerfile.service
scripts/: deploy-client.sh  deploy-server.sh  encrypt.sh
src/: run_service.py  streamlit_app.py
src/client/: __init__.py  client.py
src/core/: __init__.py  llm.py  settings.py
src/schema/: __init__.py  schema.py
src/service/: service.py
